--- a/static/html/Pc2Judge2.html
+++ b/static/html/Pc2Judge2.html
@@ -15,3 +15,13 @@
 
     </form>
 </div>
+</div>
+<div class="xblock-actions">
+    <ul>
+     
+      <li class="action-item">
+        <a href="#" class="button cancel-button">Close</a>
+      </li>
+    </ul>
+ </div>
+
