--- a/static/html/Pc2Judge.html
+++ b/static/html/Pc2Judge.html
@@ -1,4 +1,4 @@
 <div class="Pc2Judge">
-     <iframe src="http://140.115.51.227/" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+     <iframe src="http://acnlab.openedx.tw/" width="400" height="300" frameborder="0" scrolling="no"></iframe>
 </div>
 
