--- a/static/html/Pc2Judge.html
+++ b/static/html/Pc2Judge.html
@@ -1,4 +1,9 @@
 <div class="Pc2Judge">
-     <iframe src="https://acnlab.openedx.tw/" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+
+<p hidden> <input type="text" id = "edx" name="FirstName" value="{href}"><br></p>
+<p hidden> <input type="text" id = "edx2" name="FirstName" value="{problem}"><br></p>	 
+<iframe src="" id="iframe1" width="400" height="300" frameborder="0" scrolling="no"></iframe>	 
+
+	   
 </div>
 
