--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -2,8 +2,8 @@
   <ul class="list-input settings-list">
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
-        <label class="label setting-label" for="href">Problem Number</label>
-        <input class="input setting-input" name="href" id="href" value="{href}" type="text" />
+        <label class="label setting-label" for="problemtext">Problem Number</label>
+        <input class="input setting-input" name="problemtext" id="problemtext" value="{problemtext}" type="text" />
       </div>
       <span class="tip setting-help"></span>
     </li>
