--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -11,10 +11,11 @@
     <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a href="#" class="button action-primary save-button">Save</a>
+        <a problemtext="#" class="button action-primary save-button">Save</a>
       </li>
+      </ul>
       <li class="action-item">
-        <a href="#" class="button cancel-button">Cancel</a>
+        <a problemtext="#" class="button cancel-button">Cancel</a>
       </li>
     </ul>
   </div>
