--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -12,10 +12,10 @@
     <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a problemtext="#" class="button action-primary save-button">Save</a>
+        < class="button action-primary save-button">Save</a>
       </li>
       <li class="action-item">
-        <a problemtext="#" class="button cancel-button">Cancel</a>
+        < class="button cancel-button">Cancel</a>
       </li>
     </ul>
   </div>
