--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -1,21 +1,28 @@
 <div class="wrapper-comp-settings is-active editor-with-buttons" id="settings-tab">
   <ul class="list-input settings-list">
+   
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
-        <label class="label setting-label" for="problemtext">Problem Number</label>
-        <input class="input setting-input" name="problemtext" id="problemtext" value="{problemtext}" type="text" />
+        <label class="label setting-label" for="maxwidth">Max Width</label>
+        <input class="input setting-input" name="maxwidth" id="maxwidth" value="{maxwidth}" type="text" />
       </div>
-      <span class="tip setting-help"></span>
+      <span class="tip setting-help">Maximum width of the video player.</span>
     </li>
     <li class="field comp-setting-entry is-set">
-     </ul>
-    <div class="xblock-actions">
+      <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="maxheight">Max Height</label>
+        <input class="input setting-input" name="maxheight" id="maxheight" value="{maxheight}" type="text" />
+      </div>
+      <span class="tip setting-help">Maximum height of the video player.</span>
+    </li>
+  </ul>
+  <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a problemtext="#" class="button action-primary save-button">Save</a>
+        <a href="#" class="button action-primary save-button">Save</a>
       </li>
       <li class="action-item">
-        <a problemtext="#" class="button cancel-button">Cancel</a>
+        <a href="#" class="button cancel-button">Cancel</a>
       </li>
     </ul>
   </div>
