--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -19,10 +19,10 @@
   <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a href="#" class="button action-primary save-button">Save</a>
+        <a  class="button action-primary save-button">Save</a>
       </li>
       <li class="action-item">
-        <a href="#" class="button cancel-button">Cancel</a>
+        <a  class="button cancel-button">Cancel</a>
       </li>
     </ul>
   </div>
