--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -1,6 +1,12 @@
 <div class="wrapper-comp-settings is-active editor-with-buttons" id="settings-tab">
   <ul class="list-input settings-list">
-   
+    <li class="field comp-setting-entry is-set">
+      <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="href">Video URL</label>
+        <input class="input setting-input" name="href" id="href" value="{href}" type="text" />
+      </div>
+      <span class="tip setting-help">Example: https://vimeo.com/46100581</span>
+    </li>
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
         <label class="label setting-label" for="maxwidth">Max Width</label>
@@ -19,10 +25,10 @@
   <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a  class="button action-primary save-button">Save</a>
+        <a problemtext="#" class="button action-primary save-button">Save</a>
       </li>
       <li class="action-item">
-        <a  class="button cancel-button">Cancel</a>
+        <a href="#" class="button cancel-button">Cancel</a>
       </li>
     </ul>
   </div>
