--- a/static/html/Pc2Judge_edit.html
+++ b/static/html/Pc2Judge_edit.html
@@ -25,7 +25,7 @@
   <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a problemtext="#" class="button action-primary save-button">Save</a>
+        <a href="#" class="button action-primary save-button">Save</a>
       </li>
       <li class="action-item">
         <a href="#" class="button cancel-button">Cancel</a>
